argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - argocd.k8s.epapyrus.com
    secretName: argocd.k8s.epapyrus.com-tls
  rules:
    - host: argocd.k8s.epapyrus.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server-for-ingress
                port:
                  number: 443
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-for-ingress
  namespace: argocd
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: argocd-server
